Window horizontal overflow  fixed

--- a/HomeCinema-war/web/scss/main.scss
+++ b/HomeCinema-war/web/scss/main.scss
@@ -10,6 +10,7 @@ body {
     margin: 0;
     font-family: $font;
     min-height: 800px;
+    overflow-x: hidden;
     .textarea-noresizing {
         resize:none;
     }
